--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-click = "*"
-pytest = "*"
+flask = "==3.0.0"
+click = "==8.1.7"
+pytest = "==7.4.3"
+blinker = "==1.7.0"
+iniconfig = "==2.0.0"
+itsdangerous = "==2.1.2"
+jinja2 = "==3.1.2"
+markupsafe = "==2.1.3"
+packaging = "==23.2"
+pluggy = "==1.3.0"
+werkzeug = "==3.0.1"
 
 [dev-packages]
 
